--- a/Project1/src/AddFunds.form
+++ b/Project1/src/AddFunds.form
@@ -22,12 +22,12 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanel1" alignment="0" pref="530" max="32767" attributes="0"/>
+          <Component id="jPanel1" min="-2" pref="574" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanel1" alignment="0" pref="392" max="32767" attributes="0"/>
+          <Component id="jPanel1" min="-2" pref="443" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
